--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ spring.application.name=inventory-service
 server.port=8282
 management.endpoints.web.exposure.include=*
 
-spring.cloud.config.uri=http://localhost:8888
-spring.datasource.url= jdbc:mysql://localhost:3306/world?useSSL=false
+spring.datasource.url= jdbc:postgresql://localhost:5432/inventorydb
 spring.db.driver= com.mysql.jdbc.Driver
-spring.datasource.username = root
-spring.datasource.password = adminroot
+spring.datasource.username = capitalone
+spring.datasource.password = admin
 spring.jpa.show-sql = true
-#spring.jpa.hibernate.ddl-auto = create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
